--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sefailyasoz/react-carousel": "^1.1.1",
+    "@splinetool/react-spline": "^2.2.6",
+    "@trendyol-js/react-carousel": "^3.0.2",
     "classnames": "^2.3.2",
+    "embla-carousel-react": "^8.0.0-rc15",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.19.0"
+    "react-fast-marquee": "^1.6.2",
+    "react-icons": "^4.12.0",
+    "react-id-swiper": "^4.0.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.19.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
